--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       -->
       
     <header>
-      <h1>Pines Outing - 20 November 2022</h1>
+      <h1>Pines Outing</h1>
+      <h3>20 November 2022</h3>
       <nav>
 
       </nav>
